[package]
name = "pointcloud_editor"
version = "0.1.0"
edition = "2021"
default-run = "pointcloud_editor"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "25.0"
winit = "0.30"
env_logger = "0.11"
pollster = "0.3"
bytemuck = { version = "1.4", features = [ "derive" ] }
glam = "0.27"
memmap2 = "0.9.8"
pcd-rs = "0.8"
egui = "0.32"
egui-wgpu = "0.32"
egui-winit = "0.32"